# project19

./: .gitignore  .gitmodules  Driving Instructions Angle Test.py  Ollama Instruction Angle Test.py  README.md  README_ALPAMAYO.md  annotate.py  build-db.sh  debug_out.txt  debug_turns.py  import.py  route_caputure.py  run_alpamayo.sh  run_full_pipeline.sh  run_pipeline.py  run_tests.py  setup_alpamayo_env.sh  setup_openpilot.sh  setup_openpilot_capture.py
CVAT_setup/: README.md
CVAT_setup/Yolov8_setup/: function.yaml  main.py  model_handler.py
CVAT_setup/scripts/: auto_annotate.py  docker_setup.sh  local_yolo_annotate.py  preview_yolo_annotations.py  run_all.sh  setup_cvat_yolov8_headless.sh
Openpilot_Custom/: README.md
Openpilot_Custom/openpilot_files/selfdrive/: modeld_detection_first.py  modeld_detection_second.py
alpamayo/: README.md  batch_export_inference.py  debug_output.txt  json_debug.txt  pyproject.toml  run_on_openpilot.py  test_nav.py  visualize_gt.py
alpamayo/notebooks/: custom_nav_demo_samples.json  inference.ipynb  inference_nav_custom.ipynb  mila.ipynb  visualize_results.ipynb
alpamayo/src/alpamayo1_5/: load_custom_dataset.py  navigation_command.py
alpamayo/src/alpamayo_r1/: config.py  helper.py  load_custom_dataset.py  test_inference.py
alpamayo/src/alpamayo_r1/action_space/: utils.py
alpamayo/src/alpamayo_r1/models/: alpamayo_r1.py  base_model.py
alpamayo/tests/: test_navigation_command.py
angle-tests/: Driving Instructions Angle Test.py  TurnAngleValidationTest.java
dataset/: dataset_viewer.py  llava-results.jsonl  minicpm-v-results.jsonl
dotnet-tests/: readme.txt
dotnet-tests/ollama-turn-tests/: Ollama Instruction Angle Test.cs
dotnet-tests/turn-angle-tests/: Driving Instructions Angle Test.cs  turn-angle-tests.csproj
frame_extractor/: create_quadrant_video.py  extract_3cam_route.py  frame_extractor.py
llm-model-tests/: README.md  accuracy_dataset.json  annotations.db  benchmark.py  database_explorer.ipynb  dataset_manager.py  driving_prompt.txt  generate-dataset.py  generate_all.py  import_alpamayo_prediction_json.py  import_route_annotations.py  install_dependencies.py  models.py  notebook_visualizer.py  ollama-generic.py  ollama-test.py  ollama_utils.py  pipeline_integration_test.py  pyproject.toml  readme.txt  run_alpamayo.sh  run_alpamayo_db_predictions.py  runall.py  schema.sql  setup_alpamayo.sh  test_accuracy.py  test_alpamayo.py  test_performance.py  train_lora.py  view_alpamayo_predictions.py  visualize_alpamayo.py  visualize_gt.py  visualize_results.ipynb
llm-model-tests/benchmarks/: minicpm-v_results.csv  minicpm-v_results.json  moondream_results.csv  moondream_results.json
llm-model-tests/inprogress/: gpt-oss-test.py  miniCPM-V-test.py  moondream-test.py
pipeline/: README.md  annotate_route.py  annotations.db  create_alpamayo_video.py  database_explorer.ipynb  dataset_manager.py  import_alpamayo_prediction_json.py  import_annotations.py  import_route_annotations.py  import_route_db.py  notebook_helpers.py  route_caputure.py  run_alpamayo.py  schema.sql  test_database.py
tests/: TurnAngleValidationTest.java  test_dependencies.py  test_pipeline_core.py
tests/TestLabel_S3/: ReadMe.md
